Fixed picture link

--- a/Tributepage.html
+++ b/Tributepage.html
@@ -10,7 +10,7 @@
         <h2>1908-2004</h2>
       </header>
       <div id="img-div">
-        <img id="image" href="Zenobia.jpg" alt="picture of Zenobia">
+        <img id="image" src="Zenobia.jpg" alt="picture of Zenobia">
         <figcaption id="img-caption"></figcaption>
       <div>
       <section id="tribute-info">
