Added color attempt at adding flex

--- a/Tributepage.html
+++ b/Tributepage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>My Zenobia Tribute Page</title>
+    <link href="Tributepage.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="container">
     <main id="main">
       <header id="title">
         <h1>Zenobia Powell Perry</h1>
@@ -35,6 +36,6 @@
      <a id="tribute-link" href="http://www.zenobiapowellperry.org" target="_blank">Want to know more about Zenobia?Click here!</a>      
      </footer>   
  </main>
-    
-</body>
+   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  </body>
 </html>
