Final changes toa now finished website

--- a/Tributepage.html
+++ b/Tributepage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset='UTF-8'/>
     <title>My Zenobia Tribute Page</title>
     <link href="Tributepage.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
   </head>
-  <body class="container">
+  <body class="flex-container">
     <main id="main">
       <header id="title">
         <h1>Zenobia Powell Perry</h1>
@@ -12,11 +14,12 @@
       </header>
       <div id="img-div">
         <img id="image" src="Zenobia.jpg" alt="picture of Zenobia">
-        <figcaption id="img-caption"></figcaption>
+        <figcaption id="img-caption">Picture of Zenobia Powell Perry</figcaption>
       <div>
       <section id="tribute-info">
-        <h2>Time Line</h2>
-        <h3>The following is an excerpt from Dr. Jeannie Gayle Pool's Ph.D. dissertation completed in May 2002</h3> 
+        <h2 id="h2">Time Line</h2>
+        <h4 id="h4">The following is an excerpt from Dr. Jeannie Gayle Pool's Ph.D. dissertation completed in May 2002</h4>
+         <br>
           <ul>
             <li><strong>October 3, 1908</strong>— Born, daughter of Dr. Calvin B. Powell and Birdie Thompson Powell in Boley, Okfuskgee County, Oklahoma.</li>
             <li><strong>1919</strong>— Won piano competition, at age 11</li>
@@ -30,11 +33,12 @@
             <li><strong>January 21, 2002</strong>— Received 2002 Cultural Arts Award for outstanding contributions in the field of Music Education, National Afro-American Museum, Wilberforce, Ohio.</li>
         </ul>
       </section>
-         <h3>Checkout a compostion!</h3>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/9SoxPgsccLk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <h3>Checkout a composition!</h3>
+   
+     <iframe id="video" width="460" height="215" src="https://www.youtube.com/embed/9SoxPgsccLk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <footer>
-     <a id="tribute-link" href="http://www.zenobiapowellperry.org" target="_blank">Want to know more about Zenobia?Click here!</a>      
-     </footer>   
+    <h2> <a id="tribute-link" href="http://www.zenobiapowellperry.org" target="_blank">Want to know more about Zenobia?Click here!</a></h2>
+      </footer>   
  </main>
    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
